<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailsRecord"
    tools:context=".RecordDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarOfCreateNote"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/skyBlue"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarOfCreateNote"
        android:background="@drawable/shape"
        android:backgroundTint="@color/lightest"
        android:id="@+id/layoutDetails">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="mmHg"
            android:textColor="@color/skyBlue"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/systolic"
            app:layout_constraintStart_toEndOf="@+id/systolic" />

        <TextView
            android:id="@+id/heartRateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Heart Rate : "
            android:textColor="@color/skyBlue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Heart Rate : " />

        <TextView
            android:id="@+id/heartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="75"
            android:textColor="@color/skyBlue"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/heartRateText"
            app:layout_constraintStart_toEndOf="@+id/heartRateText"
            app:layout_constraintTop_toTopOf="@+id/heartRateText" />

        <TextView
            android:id="@+id/bps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="2dp"
            android:text="BPS"
            android:textColor="@color/skyBlue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/heartRate"
            app:layout_constraintStart_toEndOf="@+id/heartRate" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="Date : "
            android:textColor="@color/skyBlue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="12/05/2023"
            android:textColor="@color/skyBlue"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />


        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Status : "
            android:textColor="@color/skyBlue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <ImageView
            android:id="@+id/statusIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            app:srcCompat="@drawable/circle"
            app:tint="#41C341" />

        <TextView
            android:id="@+id/diastolicTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Diastolic : "
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/skyBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heartRateText" />

        <TextView
            android:id="@+id/diastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="80"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/skyBlue"
            app:layout_constraintBottom_toBottomOf="@+id/diastolicTxt"
            app:layout_constraintStart_toEndOf="@+id/diastolicTxt"
            app:layout_constraintTop_toTopOf="@+id/diastolicTxt" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="mmHg"
            android:textSize="18dp"
            android:textColor="@color/skyBlue"
            app:layout_constraintBottom_toBottomOf="@+id/diastolic"
            app:layout_constraintStart_toEndOf="@+id/diastolic" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Systolic : "
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/skyBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diastolicTxt" />

        <TextView
            android:id="@+id/systolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="120"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/skyBlue"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Comment : "
            android:textColor="@color/skyBlue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Working"
            android:textColor="@color/skyBlue"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <Button
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="80dp"
            android:drawableLeft="@drawable/edit"
            android:text="Edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintVertical_bias="0.48000002" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/delete_icon"
            android:text="delete"
            app:layout_constraintBottom_toBottomOf="@+id/editBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editBtn"
            app:layout_constraintTop_toTopOf="@+id/editBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>